--- a/evaluate/index.html
+++ b/evaluate/index.html
@@ -3,19 +3,32 @@
 <head>
 	<meta charset="utf-8">
 	<title> Evaluate submission </title>
+	<link rel="shortcut icon" href="favicon.png">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto+Mono&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
-	<script src="script.js" defer charset="utf-8"></script>
+	<script type="module" src="script.js" defer charset="utf-8"></script>
 </head>
 <body>
 	<main>
 		<section id="submission">
 			<h1> Evaluate submission </h1>
-			<input type="text" value="" placeholder="URL to API" title="Full URL to the REST API that should be tested. <br /> Example: http:/localhost:1337" />
+			<p>
+				This is a web interface for testing your REST API. Input the URL below. Example: <code>http://localhost:1342</code>
+				<br />
+				Click "Test all" to start the tests.
+				<!--They run sequentially be design-->
+			</p>
+			<p>
+				To customize this to an API, you need to change the test cases in <code>tests.js</code> and add functions in <code>evaluators.js</code>. Also make sure your web server has added CORS headers, if you use this from another server.
+			</p>
+			<input type="text" value="http://localhost:1342" placeholder="URL to API" title="Full URL to the REST API that should be tested. Example: http:/localhost:1337" />
 			<button> Test all </button>
 
+			<!-- Example output, for each test
 			<div>
 				<code><span>❔</span>GET /hamsters</code>
-			</div>
+			</div> -->
 		</section>
 	</main>
 </body>
