--- a/evaluate/index.html
+++ b/evaluate/index.html
@@ -14,15 +14,13 @@
 		<section id="submission">
 			<h1> Evaluate submission </h1>
 			<p>
-				This is a web interface for testing your REST API. Input the URL below. Example: <code>http://localhost:1342</code>
-				<br />
-				Click "Test all" to start the tests.
+				This is a web interface for testing your REST API. Input the URL below. Click "Test all" to start the tests.
 				<!--They run sequentially be design-->
 			</p>
-			<p>
+			<!-- <p>
 				To customize this to an API, you need to change the test cases in <code>tests.js</code> and add functions in <code>evaluators.js</code>. Also make sure your web server has added CORS headers, if you use this from another server.
-			</p>
-			<input type="text" value="http://localhost:1342" placeholder="URL to API" title="Full URL to the REST API that should be tested. Example: http:/localhost:1337" />
+			</p> -->
+			<input type="text" value="http://localhost:????" placeholder="URL to API" title="Full URL to the REST API that should be tested. Example: http:/localhost:1337" />
 			<button> Test all </button>
 
 			<!-- Example output, for each test
