--- a/evaluate/index.html
+++ b/evaluate/index.html
@@ -20,7 +20,7 @@
 			<!-- <p>
 				To customize this to an API, you need to change the test cases in <code>tests.js</code> and add functions in <code>evaluators.js</code>. Also make sure your web server has added CORS headers, if you use this from another server.
 			</p> -->
-			<input type="text" value="http://localhost:????" placeholder="URL to API" title="Full URL to the REST API that should be tested. Example: http:/localhost:1337" />
+			<input type="text" value="https://my-beck-end.herokuapp.com/api" placeholder="URL to API" title="Full URL to the REST API that should be tested. Example: http:/localhost:1337" />
 			<button> Test all </button>
 
 			<!-- Example output, for each test
